# self-reg-demo

./: CMakeLists.txt  factory.cpp  factory.h  main.cpp  type1.cpp  type1.h  type2.cpp
